# generalbots

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPENDENCIES.ps1  DEPENDENCIES.sh  DEV-DEPENDENCIES.sh  INFRA.md  PROD.md  PROMPT.md  README.md  STAGE.md  botserver.log.new  crates.tmp  deploy.sh  finish.md  reset.sh  restart.ps1  restart.sh  salesianos-switchers-test.md  setup-stage-gbo.sh
botapp/: .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
botapp/.forgejo/workflows/: botapp.yaml
botapp/js/: app-extensions.js
botapp/src/: lib.rs  main.rs
botapp/src/desktop/: drive.rs  mod.rs  safe_command.rs  sync.rs  tray.rs
botapp/ui/app-guides/: local-files.html  native-settings.html
botattendance/: Cargo.toml
botattendance/src/: keyword_services.rs  lib.rs  llm_assist_config.rs  llm_assist_handlers.rs  models.rs  queue_csv.rs  queue_handlers.rs  routes.rs  webhooks.rs
botautotask/: Cargo.toml
botautotask/src/: agent_executor.rs  app_generator.rs  app_logs.rs  ask_later.rs  designer_ai.rs  lib.rs  safety_layer.rs  schema.rs  task_manifest.rs  task_types.rs  types.rs
botautotask/src/intent_classifier/: mod.rs  types.rs
botbasic_ai/: Cargo.toml
botbasic_ai/src/: keywords.rs  lib.rs  llm_ext.rs
botbasic_ai/src/keywords/: ai_tools.rs  clear_tools.rs  code_sandbox.rs  enhanced_llm.rs  enhanced_memory.rs  events.rs  llm_macros.rs  mcp_client.rs  mcp_directory.rs  model_routing.rs  multimodal.rs  use_website.rs
botbasic_compiler/: Cargo.toml
botbasic_compiler/src/: save_conversion.rs  types.rs
botbasic_compiler/src/blocks/: mod.rs  talk.rs
botbasic_data/: Cargo.toml
botbasic_data/src/: kb.rs  keywords.rs  lib.rs
botbasic_data/src/keywords/: data_operations.rs  db_api.rs  detect.rs  find.rs  get.rs  kb_statistics.rs  mod.rs  save_from_unstructured.rs  search.rs  set.rs  table_access.rs  think_kb.rs  use_account.rs  user_memory.rs
botbasic_system/: Cargo.toml
botbasic_system/src/: face_ext.rs  security_ext.rs
botbasic_system/src/keywords/: app_server.rs  create_site.rs  create_task.rs  mod.rs  security_protection.rs  set_schedule.rs  synchronize.rs
botbilling/: Cargo.toml
botbilling/src/: alerts.rs  api_models.rs  billing_ui.rs  invoice.rs  middleware.rs  quotas.rs  schema.rs
botbrowser/: Cargo.toml
botbrowser/src/: lib.rs
botcore/: 3rdparty.toml  Cargo.toml
botcore/src/: bot_database.rs  config.rs  features.rs  i18n.rs  kb.rs  lib.rs  middleware.rs  organization.rs  urls.rs
botcore/src/bootstrap/: bootstrap_types.rs  bootstrap_utils.rs  instance.rs  vault.rs
botcore/src/dns/: mod.rs
botcore/src/kb/: embedding_generator.rs  mod.rs  web_crawler.rs  website_crawler_service.rs
botcore/src/package_manager/: alm_setup.rs  cli.rs  facade.rs  mod.rs  setup.rs
botcore/src/shared/: enums.rs  message_type.rs  sql_guard.rs  state.rs  test_utils.rs
botcoredirectory/: Cargo.toml
botcoredirectory/src/: bootstrap.rs  client.rs  lib.rs  provisioning.rs
botcoredirectory/src/groups/: kbs.rs  mod.rs
botcoreoauth/: Cargo.toml
botcoreoauth/src/: providers.rs  routes.rs
botcorepkg/: Cargo.toml
botcorepkg/src/: alm_setup.rs  cli.rs  cli_display.rs  cli_ops.rs  cli_secrets.rs  component.rs  container.rs  facade.rs  installer.rs  installer_regs.rs  installer_regs2.rs  installer_vault.rs  installer_vault2.rs  lib.rs  os.rs
botcoresecrets/: Cargo.toml
botcoresecrets/src/: lib.rs  manager.rs  service_configs.rs
botcoresession/: Cargo.toml
botcoresession/src/: session_data.rs  session_endpoints.rs
botdashboards/: Cargo.toml
botdashboards/src/: lib.rs  storage.rs
botdashboards/src/handlers/: data_sources.rs  widgets.rs
botdeployment/: Cargo.toml
botdeployment/src/: forgejo.rs  lib.rs
botdevice/: .gitignore  Cargo.toml  README.md  tauri.conf.json
botdevice/.forgejo/workflows/: botdevice.yaml
botdevice/capabilities/: default.json
botdevice/rom/: README.md  install.sh
botdevice/rom/gsi/: README.md
botdevice/rom/scripts/: build-magisk-module.sh  debloat.sh
botdevice/scripts/: create-bootanimation.sh  generate-icons.sh
botdevice/src/: lib.rs
botinstagram/: Cargo.toml
botinstagram/src/: lib.rs
botlearn/: Cargo.toml
botlearn/src/: lib.rs  ui.rs
botlib/: Cargo.toml  README.md
botlib/.forgejo/workflows/: botlib.yaml
botlib/locales/en/: admin.ftl  analytics.ftl  auth.ftl  bot-templates.ftl  channels.ftl  common.ftl  contacts.ftl  errors.ftl  notifications.ftl  ui.ftl  video.ftl  webinar.ftl
botlib/locales/es/: admin.ftl  analytics.ftl  auth.ftl  bot-templates.ftl  channels.ftl  common.ftl  contacts.ftl  errors.ftl  notifications.ftl  ui.ftl  video.ftl  webinar.ftl
botlib/locales/pt-BR/: admin.ftl  analytics.ftl  auth.ftl  bot-templates.ftl  channels.ftl  common.ftl  contacts.ftl  errors.ftl  notifications.ftl  ui.ftl  video.ftl  webinar.ftl
botlib/src/: app_state.rs  branding.rs  db_pool.rs  error.rs  http_client.rs  lib.rs  limits.rs  logging.rs  message_types.rs  models.rs  resilience.rs  traits.rs  version.rs  work_path.rs
botlib/src/i18n/: bundle.rs  locale.rs  mod.rs
botlib/src/models/: api.rs  attachment.rs  messaging.rs  mod.rs  session.rs  workflow.rs
botlib/src/security/: command_guard.rs  mod.rs  utils.rs
botllm/: Cargo.toml
botllm/src/: bedrock.rs  cache.rs  claude.rs  glm.rs  hallucination_detector.rs  lib.rs  llm.md
botllm/src/llm_models/: deepseek_r3.rs  gpt_oss_20b.rs  minimax.rs
botllm/src/prompt_manager/: README.md
botmaintenance/: Cargo.toml
botmarketing/: Cargo.toml
botmarketing/src/: campaigns.rs  ip_router.rs  lib.rs  schema.rs  state.rs  triggers.rs  warmup.rs  whatsapp.rs
botmeet/: Cargo.toml
botmeet/src/: conversations.rs  lib.rs  mod_trimmed.rs  recording.rs  service.rs  ui.rs  whiteboard.rs  whiteboard_export.rs
botmeet/src/webinar_api/: handlers.rs  service.rs
botplayer/: Cargo.toml
botproducts/: Cargo.toml
botproducts/src/: lib.rs  schema.rs
botqdrant/: Cargo.toml
botqdrant/src/: drive_vectordb.rs  embedding.rs  hybrid_search.rs  lib.rs  vectordb_indexer.rs
botresearch/: Cargo.toml
botresearch/src/: ui.rs
botui/: README.md  (+5 more)
(+2718 files in other folders)
