[package]
name = "botattendance"
version = "6.3.0"
edition = "2021"
description = "General Bots attendance module - queue, SLA, webhooks, LLM assist, keyword services"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[dependencies]
axum = { workspace = true, features = ["ws", "multipart", "macros"] }
chrono = { workspace = true, features = ["serde", "clock"] }
diesel = { workspace = true, features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
r2d2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "fs"] }
uuid = { workspace = true, features = ["serde", "v4"] }
log = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
llm = []

[lints]
workspace = true
