[package]
name = "botautotask"
version = "6.3.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[features]
default = []
llm = []
drive = ["rust-s3"]

[dependencies]
botlib = { workspace = true }

diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
r2d2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
log = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "time", "process"] }
axum = { workspace = true }
rhai = { workspace = true }
rust-s3 = { workspace = true, optional = true }
futures = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
