[package]
name = "botbasic_compiler"
version = "6.3.0"
edition = "2021"
description = "BASIC compiler - syntax transforms, goto logic, save conversion, tool parsing"
license = "AGPL-3.0"

[features]
default = []
tasks = []
drive = []
security = []
automation = []

[dependencies]
botbasic_types = { path = "../botbasic_types" }
rhai = { workspace = true, features = ["sync"] }

botlib = { workspace = true }
botschema = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables"] }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

botcore = { path = "../botcore" }

[lints]
workspace = true
