[package]
name = "botbasic_data"
version = "6.3.0"
edition = "2021"
description = "BASIC data keywords - database operations, tables, memory, KB, CRM, products"
license = "AGPL-3.0"

[features]
default = []
vectordb = []
people = []
billing = []
llm = []
drive = []
sheet = []

[dependencies]
botlib = { workspace = true, features = ["database", "http-client"] }
botbasic_types = { path = "../botbasic_types" }
botbasic_core = { path = "../botbasic_core" }
rhai = { workspace = true, features = ["sync"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }

tokio = { workspace = true, features = ["sync", "rt", "macros"] }
url = { workspace = true }
[lints]
workspace = true
