[package]
name = "botcoredirectory"
version = "6.3.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[features]
default = []
drive = []
mail = []

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables", "extras"] }
log = { workspace = true }
r2d2 = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
