[package]
name = "botcoreoauth"
version = "6.3.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables"] }
log = { workspace = true }
r2d2 = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
