[package]
name = "botcorepkg"
version = "6.3.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[features]
default = []

[dependencies]
botlib = { workspace = true }
botcoresecrets = { workspace = true }
botsecurity = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
chrono = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
r2d2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dotenvy = { workspace = true }
