[package]
name = "botcoresession"
version = "6.3.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[features]
default = ["cache"]
cache = ["dep:redis"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["clock", "std", "serde"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric", "32-column-tables"] }
log = { workspace = true }
r2d2 = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }

redis = { workspace = true, features = ["tokio-comp"], optional = true }
