[package]
name = "botdeployment"
version = "6.3.0"
edition = "2021"
description = "General Bots deployment infrastructure for VibeCode platform"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"

[dependencies]
axum = { workspace = true }
git2 = "0.20"
log = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

[lints]
workspace = true
