[package]
name = "botlearn"
version = "6.3.0"
edition = "2021"
description = "Learning Management System (LMS) module for General Bots"
license = "AGPL-3.0"
authors = ["Pragmatismo.com.br", "General Bots Community"]
repository = "https://github.com/GeneralBots/BotServer"
keywords = ["bot", "lms", "learning", "education", "courses"]
categories = ["web-programming", "data-structures"]

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["clock", "std", "serde"] }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
